--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Menu App</title>
 </head>
 <body>
-    <h1>Menú de mi restaurante</h1>
+    <h1>Menú "Samu Cabrera"</h1>
     <div id="lista-menu"></div> <!-- Aquí pondremos nuestros productos -->
     <script src="main.js"></script>
 </body>
